--- a/hasta_el_hueso_EP21.org
+++ b/hasta_el_hueso_EP21.org
@@ -8,6 +8,8 @@ VG : Victor Gaviria
 
 ¿Cómo se empatan/operan esos procesos cortos?
 
+Creo que hay que concebir en la lógica joven o adolescente la delincuencia como una debilidad, la debilidad de que el sistema no acepte o entienda mi poder y tener impotencia sobre las injusticias que me circundan y la que se me planta en frente, incluso para aniquilarme.
+
 
 **** VG: Los pelaos esta buscando alguien que les de un horizonte
 
